src/app/core/card/card.component.css
:host {
    display: inline-block;
    height: 100%;
    width: 100vw;
    position: relative;
    /*padding: 0 10px;*/
    box-sizing: border-box;
}

.card {
    position: absolute;
    overflow: hidden;
    height: 100%;
    width: 100%;
    transition: transform 400ms;
    transform: translateY(150vh);
    border-radius: 25px;
    box-shadow: 3px 5px 7px rgba(0,0,0,.1);
    white-space: normal;
}

.card.full {
    transform: scale(1,1) !important;
    border-radius: 0px;
    box-shadow: none;
}

.card.up {
    transform: translateY(-20px);
}

.card.full.up {
    transform: translateY(0);
}
.card.remove {
    transform: translateY(-120vh);
    width: 0px;
}

.overlay {
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: rgba(0,0,255,.1);
    opacity: 0;
}
.header {
    display: flex;
    width: 100%;
    border: 1px solid red;
}
.header .title {
    flex: 1;
}
.header .btn-close {
    height: 32px;
    width: 32px;
    border: 1px solid red;
}

.app-frame {
    border: none;
    height: 100%;
    width: 100%;
    background-color: #EAEAEA;
}

.noanimate {
    transition: transform 0ms;
}

